# CarmPom

./: .gitignore  ROADMAP.md  analysis.ipynb  app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.streamlit/: config.toml  secrets.toml
data/: .gitkeep  bracket_2026.csv  experiments.jsonl  injuries_cache.json  kenpom2026_ranks.csv  odds_cache.json  team_id_map.csv
data/models/: best.pkl
db/: database.py  models.py
ml/: __init__.py  features.py  kaggle_loader.py  predict.py  team_map.py  train.py
pipeline/: fetch_box_scores.py  fetch_games.py  fetch_injuries.py  fetch_odds.py
ratings/: __init__.py  engine.py  kaggle_engine.py  report.py
